--- a/vars/main.yml
+++ b/vars/main.yml
@@ -1,3 +1,3 @@
 ---
-intellij_url: "http://download.jetbrains.com/idea/ideaIC-{{intellij_version}}.tar.gz"
+intellij_url: "http://download.jetbrains.com/idea/ideaIU-{{intellij_version}}.tar.gz"
 intellij_folder_name: "{{result_intellij_folder_name.stdout_lines.0}}"
